# Nova-arsenal

./: .env.example  .gitignore  .pre-commit-config.yaml  ARSENAL.md  CAPABILITIES.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  NOVA_ARCHITECTURE.md  README.md  SECURITY.md  alembic.ini  auto_phase4_escalation.sh  auto_phase5_godmode.sh  clean_and_phase1.sh  debug-api.ts  debug-track.ts  docker-compose.prod.yml  docker-compose.yml  final_god_payload.py  fixed_redteam_install.sh  get_subs.py  god_payload.py  godmode_final_fix.sh  godmode_polymorph.py  godmode_ultimate_clean.sh  godmode_ultimate_fixed.sh  install.sh  launch_swarm.py  mission.json  mythos_black_payload.py  nova.py  nova_0din_bounty_report.json  nova_0din_deployment_report.json  nova_0din_hunter.py  nova_active_ibb.py  nova_active_ibb_report.json  nova_adaptive_brain.py  (+415 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  nova-dispatch-test.yml  nova-godmode.yml  nova-hunt.yml  nova-ollama-models.yml  nova-total-dominance.yml  nova-truth-verified.yml  nova-ultimate-verified.yml  nova-v6-hunt.yml  nova-v7-hunt.yml  release.yml  security.yml  zap_scan.yml
.venv-1/: pyvenv.cfg
alembic/: env.py
alembic/versions/: 82cbcd264eab_initial_models.py
clients/vscode/: .vscodeignore  package-lock.json  package.json  tsconfig.json
clients/web/: next.config.js  package.json  tailwind.config.js
config/: .env.example  default.yml  litellm.yaml  settings.example.yaml
containers/: Dockerfile.agent  Dockerfile.kali  Dockerfile.web
docs/: CHAIN_REASONING_INTEGRATION.md  FEATURES.md  INSTALLATION_COMPLETE.md  NOVA_ARCHITECTURE.md  NOVA_CHAIN_REASONER_README.md  NOVA_README.md  api-reference.md  architecture.md  configuration.md  deployment.md  getting-started.md  yarn-context-scaling.md
docs/adr/: 0001-record-architecture-decisions.md  0002-multi-llm-strategy.md  0003-database-choice.md  0004-authentication-approach.md  0005-web-ui-framework.md  0006-container-architecture.md
k8s/: configmap.yaml  ingress.yaml  namespace.yaml
k8s/pvc/: web-data.yaml  (+2 more)
modules/: __init__.py
nova_0din_submission/: manifest.json  nova_agentic_deployment_report.json  nova_live_exploit_report.json
nova_agentic_evidence/: exploit_3.json  exploit_5.json
nova_arsenal/: __init__.py  agent_runner.py  async_utils.py  cli.py  code_generator.py  config.py  ctf_solver.py  kali_blueprint.py  kali_tools_data.py  kali_tools_extended.py  payload_generator.py  persona_manager.py  prompt_builder.py  resilient_agent_core.py  sandbox_executor.py  scheduler.py  secure_executor.py  swarm.py  tool_definitions.py
nova_nextgen_submission/: manifest.json
skills/: SKILL_AUTHORING_GUIDE.md
tests/: conftest.py
(+195 files in other folders)
