[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nova-arsenal"
version = "1.3.0"
description = "Autonomous security research platform with zero-day candidate pipeline"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Informant254"}
]
keywords = ["security", "pentesting", "automation", "agent", "autonomous"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "pre-commit>=3.3.0",
    "basedpyright>=1.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
nova-agent = "nova_arsenal.cli:main"

[project.urls]
Homepage = "https://github.com/Informant254/Nova-arsenal"
Documentation = "https://github.com/Informant254/Nova-arsenal/tree/main/docs"
Repository = "https://github.com/Informant254/Nova-arsenal"
Issues = "https://github.com/Informant254/Nova-arsenal/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["nova_arsenal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["nova_arsenal"]
omit = [
    "tests/*",
    "clients/*",
    "nova_arsenal/cli.py",
]

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "except ImportError",
]

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.10"
venvPath = "."
venv = ".venv"
